# embassy-v-rtic

./: README.md
embassy-demo/: Cargo.toml  rust-toolchain.toml
embassy-demo/.cargo/: config.toml
embassy-demo/src/: main.rs
rtic-demo/: Cargo.toml
rtic-demo/src/: main.rs
