[package]
name = "rtic-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0.1", features = ["cortex-m-systick", "systick-64bit"] }
rtic-sync = "1.0.2"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1.2"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h743v", "rt"]}

defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

futures = { version = "0.3.28", default-features = false, features = ["async-await"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
